adding console.table to package .json manually

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/mojsun/employee-tracker#readme",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "console.table": "^0.10.0"
   },
   "devDependencies": {},
   "description": ""
